Remove brand name from header in passenger order page

--- a/views/passenger-order.html
+++ b/views/passenger-order.html
@@ -136,7 +136,7 @@
 
 <body>
 
-  <div class="brand-header">【立邁集團】 桃園機場接送服務</div>
+  <div class="brand-header">桃園機場接送服務</div>
 
   <div class="wrap">
     <h1>貴賓叫車</h1>
